--- a/alumnoLogin.html
+++ b/alumnoLogin.html
@@ -3,24 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Enlace</title>
-    <!--Icono-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
+    <!-- CSS, iconos y fuentes para MDB -->
     <link rel="icon" href="Icon/icono.svg" type="image/x-icon">
-    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
-    <!-- Google Fonts Roboto -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
-    <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <!-- Material Design Bootstrap -->
     <link rel="stylesheet" href="css/mdb.min.css">
 </head>
-
-<body>
-
-    <!-- Start your project here-->
     <!--Barra de navegacion-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a href="index.html" class="navbar-brand">
@@ -55,16 +46,22 @@
             </ul>
         </div>
     </nav>
-    <!--Apartado principal-->
-    <div class="jumbotron text-center">
-        <h1>Enlace UPSin</h1>
-        <img src="Icon/UPSin.png" style="width: 15%;" alt="Logo UPSin">
-        <hr>
-        <a href="docenteLogin.html" class="btn btn-primary">Docente</a>
-        <a href="alumnoLogin.html" class="btn btn-secondary">Alumno</a>
-        <a class="btn btn-success">Administrador</a>
-    </div>
-
+    <!--Login-->
+    <form class="text-center border border-light p-5" action="#!">
+        <p class="h4 mb-4">Acceder </p>
+        <!-- Email -->
+        <input type="email" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="Usuario">
+        <!-- Password -->
+        <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Contraseña">
+        <div class="d-flex justify-content-around">
+            <div>
+                <!-- Si se olvido la contraseña que le mande un mensaje al administrador -->
+                <a href="">¿Olvidaste tu contraseña?</a>
+            </div>
+        </div>
+        <!-- Boton para entrar -->
+        <button class="btn btn-info btn-block my-4" type="submit">Entrar</button>
+    </form>
     <!-- Footer -->
     <footer class="page-footer font-small indigo">
         <!-- Footer Links -->
@@ -142,13 +139,13 @@
             <a href="https://upsin.edu.mx/">UPSin</a>
         </div>
     </footer>
-    <!-- End your project here-->
-
-    <!-- Scripts para MDB -->
+    <!-- Scripts para el MDB -->
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/popper.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/mdb.min.js"></script>
+<body>
+
 </body>
 
 </html>
