--- a/docenteLogin.html
+++ b/docenteLogin.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
     <!-- CSS, iconos y fuentes para MDB -->
-    <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon">
+    <link rel="icon" href="Icon/icono.svg" type="image/x-icon">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -124,10 +124,6 @@
                         <a class="tw-ic">
                             <i class="fab fa-twitter fa-lg white-text mr-4"> </i>
                         </a>
-                        <!-- Google +-->
-                        <a class="gplus-ic">
-                            <i class="fab fa-google-plus-g fa-lg white-text mr-4"> </i>
-                        </a>
                         <!--Linkedin -->
                         <a class="li-ic">
                             <i class="fab fa-linkedin-in fa-lg white-text mr-4"> </i>
@@ -136,17 +132,13 @@
                         <a class="ins-ic">
                             <i class="fab fa-instagram fa-lg white-text mr-4"> </i>
                         </a>
-                        <!--Pinterest-->
-                        <a class="pin-ic">
-                            <i class="fab fa-pinterest fa-lg white-text"> </i>
-                        </a>
                     </div>
                 </div>
             </div>
         </div>
 
         <div class="footer-copyright text-center py-3">© 2020 Copyright:
-            <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
+            <a href="https://upsin.edu.mx/">UPSin</a>
         </div>
     </footer>
     <!-- Scripts para el MDB -->
