Se acomodaron cosas con php

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 
     <!-- Start your project here-->
-    <!--Barra de navegacion-->
+    <!--Barra de navegacion, cuando se utiice PHP se va a hacer con include, al igual que el footer-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a href="index.html" class="navbar-brand">
             <img src="Icon/icono.svg" style="width: 20%;" alt="EnlaceUPSin">
