--- a/alumnoLogin.html
+++ b/alumnoLogin.html
@@ -60,7 +60,7 @@
             </div>
         </div>
         <!-- Boton para entrar -->
-        <button class="btn btn-info btn-block my-4" type="submit">Entrar</button>
+        <button class="btn btn-info btn-block my-4" type="submit" onclick="location.href='alumnoInicio.php'">Entrar</button>
     </form>
     <!-- Footer -->
     <footer class="page-footer font-small indigo">
