Se agrego el apartado tareas con sus divisiones de entrega

--- a/navAlumnos.html
+++ b/navAlumnos.html
@@ -16,7 +16,7 @@
 <body>
     <!--Barra de navegacion-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a href="alumnoInicio.html" class="navbar-brand">
+        <a href="alumnoInicio.php" class="navbar-brand">
             <img src="Icon/icono.svg" style="width: 20%;" alt="EnlaceUPSin">
             EnlaceUPSin
         </a>
@@ -31,7 +31,7 @@
                     <a href="" class="nav-link">Acerca de nosotros</a>
                 </li>
                 <li>
-                    <a href="" class="nav-link">Clases</a>
+                    <a href="alumnoInicio.php" class="nav-link">Clases</a>
                 </li>
                 <li>
                     <a href="" class="nav-link">Horario</a>
@@ -40,7 +40,7 @@
                     <a href="" class="nav-link">Avisos</a>
                 </li>
                 <li>
-                    <a href="" class="nav-link">Tareas</a>
+                    <a href="tareas.php" class="nav-link">Tareas</a>
                 </li>
                 <li>
                     <a class="nav-link" href="#">Salir</a>
