Cambios en modales, se agrego horario y avisos para base

--- a/navAlumnos.html
+++ b/navAlumnos.html
@@ -27,23 +27,24 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a href="" class="nav-link">Acerca de nosotros</a>
                 </li>
-                <li>
+                <li class="nav-item">
                     <a href="alumnoInicio.php" class="nav-link">Clases</a>
                 </li>
-                <li>
-                    <a href="" class="nav-link">Horario</a>
+                <li class="nav-item">
+                    <a href="horarioAlumno.php" class="nav-link">Horario</a>
                 </li>
-                <li>
-                    <a href="" class="nav-link">Avisos</a>
+                <li class="nav-item">
+                    <a href="avisoAlumno.php" class="nav-link">Avisos</a>
                 </li>
-                <li>
+                <li class="nav-item">
                     <a href="tareas.php" class="nav-link">Tareas</a>
                 </li>
-                <li>
-                    <a class="nav-link" href="#">Salir</a>
+                <li class="nav-item">
+                    <!--Por lo pronto solo va a fingir que funciona-->
+                    <a class="nav-link" href="index.html">Salir</a>
                 </li>
             </ul>
         </div>
