--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="#">Docente</a>
-                        <a class="dropdown-item" href="#">Alumno</a>
+                        <a class="dropdown-item" href="alumnoLogin.html">Alumno</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Administrador</a>
                     </div>
@@ -60,9 +60,11 @@
         <h1>Enlace UPSin</h1>
         <img src="Icon/UPSin.png" style="width: 15%;" alt="Logo UPSin">
         <hr>
-        <a href="docenteLogin.html" class="btn btn-primary">Docente</a>
-        <a href="alumnoLogin.html" class="btn btn-secondary">Alumno</a>
-        <a class="btn btn-success">Administrador</a>
+        <a href="docenteLogin.html" class="btn btn-primary" data-toggle="modal"
+            data-target="#modalLoginFormDocente">Docente</a>
+        <a href="alumnoLogin.html" class="btn btn-secondary" data-toggle="modal"
+            data-target="#modalLoginFormAlumno">Alumno</a>
+        <a class="btn btn-success" data-toggle="modal" data-target="#modalLoginFormAdmin">Administrador</a>
     </div>
 
     <!-- Footer -->
@@ -143,6 +145,102 @@
         </div>
     </footer>
     <!-- End your project here-->
+
+    <!--Modal Alumnos-->
+    <div class="modal fade" id="modalLoginFormAlumno" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header text-center">
+                    <h4 class="modal-title w-100 font-weight-bold">Acceder</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body mx-3">
+                    <div class="md-form mb-5">
+                        <i class="fas fa-envelope prefix grey-text"></i>
+                        <input type="email" id="defaultForm-email" class="form-control validate">
+                        <label data-error="wrong" data-success="right" for="defaultForm-email">Usuario</label>
+                    </div>
+
+                    <div class="md-form mb-4">
+                        <i class="fas fa-lock prefix grey-text"></i>
+                        <input type="password" id="defaultForm-pass" class="form-control validate">
+                        <label data-error="wrong" data-success="right" for="defaultForm-pass">Contraseña</label>
+                    </div>
+
+                </div>
+                <div class="modal-footer d-flex justify-content-center">
+                    <button class="btn btn-default" onclick="location.href='alumnoInicio.php'">Login</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--Modal Docentes-->
+    <div class="modal fade" id="modalLoginFormDocente" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header text-center">
+                    <h4 class="modal-title w-100 font-weight-bold">Acceder</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body mx-3">
+                    <div class="md-form mb-5">
+                        <i class="fas fa-envelope prefix grey-text"></i>
+                        <input type="email" id="defaultForm-email" class="form-control validate">
+                        <label data-error="wrong" data-success="right" for="defaultForm-email">Usuario</label>
+                    </div>
+
+                    <div class="md-form mb-4">
+                        <i class="fas fa-lock prefix grey-text"></i>
+                        <input type="password" id="defaultForm-pass" class="form-control validate">
+                        <label data-error="wrong" data-success="right" for="defaultForm-pass">Contraseña</label>
+                    </div>
+
+                </div>
+                <div class="modal-footer d-flex justify-content-center">
+                    <button class="btn btn-default">Login</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--Modal Administrador-->
+    <div class="modal fade" id="modalLoginFormAdmin" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header text-center">
+                    <h4 class="modal-title w-100 font-weight-bold">Acceder</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body mx-3">
+                    <div class="md-form mb-5">
+                        <i class="fas fa-envelope prefix grey-text"></i>
+                        <input type="email" id="defaultForm-email" class="form-control validate">
+                        <label data-error="wrong" data-success="right" for="defaultForm-email">Usuario</label>
+                    </div>
+
+                    <div class="md-form mb-4">
+                        <i class="fas fa-lock prefix grey-text"></i>
+                        <input type="password" id="defaultForm-pass" class="form-control validate">
+                        <label data-error="wrong" data-success="right" for="defaultForm-pass">Contraseña</label>
+                    </div>
+
+                </div>
+                <div class="modal-footer d-flex justify-content-center">
+                    <button class="btn btn-default">Login</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Scripts para MDB -->
     <script type="text/javascript" src="js/jquery.min.js"></script>
