--- a/footer.html
+++ b/footer.html
@@ -59,20 +59,21 @@
                 <!-- Grid column -->
                 <div class="col-md-12">
                     <div class="mb-5 flex-center">
+
                         <!-- Facebook -->
-                        <a class="fb-ic">
+                        <a class="fb-ic" href="https://www.facebook.com/UPSINSINALOA">
                             <i class="fab fa-facebook-f fa-lg white-text mr-4"> </i>
                         </a>
                         <!-- Twitter -->
-                        <a class="tw-ic">
+                        <a class="tw-ic" href="https://twitter.com/Upsin">
                             <i class="fab fa-twitter fa-lg white-text mr-4"> </i>
                         </a>
                         <!--Linkedin -->
-                        <a class="li-ic">
+                        <a class="li-ic" href="https://www.linkedin.com/company/universidad-polit%C3%A9cnica-de-sinaloa/">
                             <i class="fab fa-linkedin-in fa-lg white-text mr-4"> </i>
                         </a>
                         <!--Instagram-->
-                        <a class="ins-ic">
+                        <a class="ins-ic" href="https://www.instagram.com/upsin.mazatlan/">
                             <i class="fab fa-instagram fa-lg white-text mr-4"> </i>
                         </a>
                     </div>
