--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
     <!--Barra de navegacion, cuando se utiice PHP se va a hacer con include, al igual que el footer-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a href="index.html" class="navbar-brand">
-            <img src="Icon/icono.svg" style="width: 20%;" alt="EnlaceUPSin">
-            EnlaceUPSin
+            <img src="Icon/icono.svg" style="width: 20%;" alt="EnlaceUPSIN">
+            EnlaceUPSIN
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse " id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a href="" class="nav-link">Acerca de nosotros</a>
@@ -40,7 +40,7 @@
                 <li class="nav-item dropdown active">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Aacceder
+                        Acceder
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="#">Docente</a>
@@ -49,15 +49,12 @@
                         <a class="dropdown-item" href="#">Administrador</a>
                     </div>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Salir</a>
-                </li>
             </ul>
         </div>
     </nav>
     <!--Apartado principal-->
     <div class="jumbotron text-center">
-        <h1>Enlace UPSin</h1>
+        <h1>Enlace UPSIN</h1>
         <img src="Icon/UPSin.png" style="width: 15%;" alt="Logo UPSin">
         <hr>
         <a href="docenteLogin.html" class="btn btn-primary" data-toggle="modal"
@@ -120,19 +117,19 @@
                     <div class="mb-5 flex-center">
 
                         <!-- Facebook -->
-                        <a class="fb-ic">
+                        <a class="fb-ic" href="https://www.facebook.com/UPSINSINALOA">
                             <i class="fab fa-facebook-f fa-lg white-text mr-4"> </i>
                         </a>
                         <!-- Twitter -->
-                        <a class="tw-ic">
+                        <a class="tw-ic" href="https://twitter.com/Upsin">
                             <i class="fab fa-twitter fa-lg white-text mr-4"> </i>
                         </a>
                         <!--Linkedin -->
-                        <a class="li-ic">
+                        <a class="li-ic" href="https://www.linkedin.com/company/universidad-polit%C3%A9cnica-de-sinaloa/">
                             <i class="fab fa-linkedin-in fa-lg white-text mr-4"> </i>
                         </a>
                         <!--Instagram-->
-                        <a class="ins-ic">
+                        <a class="ins-ic" href="https://www.instagram.com/upsin.mazatlan/">
                             <i class="fab fa-instagram fa-lg white-text mr-4"> </i>
                         </a>
                     </div>
@@ -204,7 +201,7 @@
 
                 </div>
                 <div class="modal-footer d-flex justify-content-center">
-                    <button class="btn btn-default">Login</button>
+                    <button class="btn btn-default" onclick="location.href='docenteInicio.php'">Login</button>
                 </div>
             </div>
         </div>
